--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -5,90 +5,112 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane
-        xmlns="http://javafx.com/javafx/21"
-        xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="org.example.LoginController"
-        prefHeight="550.0"
-        prefWidth="700.0"
-        style="
-            -fx-background-image: url('/images/kutuphane.jpg');
-            -fx-background-size: cover;
-            -fx-background-position: center center;
-        ">
+<StackPane xmlns="http://javafx.com/javafx/21"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="org.example.LoginController"
+           prefHeight="550.0"
+           prefWidth="700.0"
+           style="
+    -fx-background-image: url('/images/kutuphane.png');
+    -fx-background-size: cover;
+    -fx-background-position: center center;
+">
 
     <children>
-
-        <VBox alignment="CENTER"
-              spacing="10"
-              prefWidth="340" prefHeight="260"
-              style="
-                  -fx-background-color: rgba(255,255,255,0.60);
-                  -fx-background-radius: 25;
-                  -fx-padding: 20;
-              ">
-            <effect>
-                <DropShadow color="#00000055" radius="25.0" spread="0.12"/>
-            </effect>
-
+        <VBox alignment="CENTER" spacing="30">
             <children>
-                <Label text="Giriş Yap"
-                       style="-fx-font-size: 18; -fx-font-weight: bold;">
+
+                <Label text="Giriş Yap">
                     <font>
-                        <Font size="18.0"/>
+                        <Font name="System Bold" size="20"/>
                     </font>
                 </Label>
 
-                <TextField fx:id="txtUsername"
-                           promptText="Kullanıcı adı"
-                           prefWidth="220"
-                           style="
-                               -fx-background-color: rgba(255,255,255,0.85);
-                               -fx-background-radius: 20;
-                               -fx-border-color: transparent;
-                               -fx-padding: 8 16;
-                           "/>
+                <VBox spacing="15"
+                      maxWidth="450"
+                      style="
+                          -fx-background-color: white;
+                          -fx-background-radius: 25;
+                          -fx-padding: 20 30 30 30;
+                      ">
+                    <effect>
+                        <DropShadow radius="15" offsetY="4"/>
+                    </effect>
+                    <HBox spacing="10" alignment="CENTER_LEFT">
+                        <Label text="Giriş tipi:"/>
 
-                <PasswordField fx:id="txtPassword"
-                               promptText="Şifre"
-                               prefWidth="220"
-                               style="
-                                   -fx-background-color: rgba(255,255,255,0.85);
-                                   -fx-background-radius: 20;
-                                   -fx-border-color: transparent;
-                                   -fx-padding: 8 16;
-                               "/>
+                        <ToggleButton fx:id="btnUser"
+                                      text="Kullanıcı"
+                                      selected="true"
+                                      onAction="#onUserRoleClick"
+                                      style="
+                      -fx-background-radius: 20;
+                      -fx-padding: 6 20;
+                      -fx-background-color: white;
+                      -fx-border-color: #cccccc;
+                      -fx-border-radius: 20;
+                      -fx-text-fill: #444;
+                  "/>
 
-                <Label fx:id="lblError" textFill="red"/>
+                        <ToggleButton fx:id="btnAdmin"
+                                      text="Admin"
+                                      onAction="#onAdminRoleClick"
+                                      style="
+                      -fx-background-radius: 20;
+                      -fx-padding: 6 20;
+                      -fx-background-color: white;
+                      -fx-border-color: #cccccc;
+                      -fx-border-radius: 20;
+                      -fx-text-fill: #444;
+                  "/>
+                    </HBox>
 
-                <HBox alignment="CENTER" spacing="10">
-                    <children>
-                        <Button text="İptal"
+                    <TextField fx:id="txtUsername"
+                               promptText="Kullanıcı adı"
+                               style="-fx-background-radius: 25;
+                                      -fx-background-color: #ffffff;
+                                      -fx-padding: 8 15 8 15;"/>
+
+                    <PasswordField fx:id="txtPassword"
+                                   promptText="Şifre"
+                                   style="-fx-background-radius: 25;
+                                          -fx-background-color: #ffffff;
+                                          -fx-padding: 8 15 8 15;"/>
+                    <Label fx:id="lblError"
+                           textFill="red"
+                           wrapText="true"
+                           maxWidth="350"/>
+
+                    <HBox spacing="30" alignment="CENTER">
+                        <Button fx:id="btnCancel"
+                                text="İptal"
                                 onAction="#onCancelClick"
-                                prefWidth="80"
-                                style="
-                                    -fx-background-color: transparent;
-                                    -fx-text-fill: #2d3436;
-                                "/>
-                        <Button text="Giriş"
+                                style="-fx-background-color: transparent;
+                                       -fx-text-fill: #444;
+                                       -fx-padding: 6 20 6 20;"/>
+
+                        <Button fx:id="btnLogin"
+                                text="Giriş"
                                 onAction="#onLoginClick"
-                                prefWidth="80"
                                 style="
-                                    -fx-background-color: linear-gradient(to right, #6c5ce7, #a29bfe);
-                                    -fx-text-fill: white;
                                     -fx-background-radius: 20;
-                                    -fx-cursor: hand;
+                                    -fx-background-color:
+                                        linear-gradient(to right, #7f5af0, #9d4edd);
+                                    -fx-text-fill: white;
+                                    -fx-padding: 6 30 6 30;
                                 "/>
-                    </children>
-                </HBox>
+                    </HBox>
+
+                </VBox>
             </children>
         </VBox>
-
     </children>
 </StackPane>
