--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -7,14 +7,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.effect.DropShadow?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity"
+<BorderPane fx:id="rootPane"
+            maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="480.0" prefWidth="800.0"
             xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.example.MainController"
             style="
-                -fx-background-image: url('/images/kutuphane.jpg');
+                -fx-background-image: url('/images/kutuphane.png');
                 -fx-background-size: cover;
                 -fx-background-position: center center;
             ">
